--- a/Project/templates/template1.html
+++ b/Project/templates/template1.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Buen dia!! </h1>
     <p>Esta es la primer pagina web en Django</p>
+    <h3 style="color:red">Nombre: {{ nombre }}</h3>
+    <h3 style="color:blue">Apellido: {{ apellido }}</h3>
+    <h4>Este template fue abierto el {{ fecha }}</h4>
 </body>
 </html>
