--- a/project/apps/cliente/templates/cliente/index.html
+++ b/project/apps/cliente/templates/cliente/index.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'home/base.html' %}
 
-    <h1>Bienvenido a mi proyecto de Django</h1>
-    
+{% block TITULO %}
+    Clientes
+{% endblock  %}
+
+{% block CONTENIDO %}
     {% for cliente in clientes %}
         <h2>{{ cliente.nombre }}</h2>
         <p>{{ cliente.apellido }}</p>
         <p>{{ cliente.nacimiento }}</p>
         <p>{{ cliente.pais_origen_id }}</p>
-
     {% endfor %}
 
-</body>
-</html>
+    <a href="{% url 'home:home' %}">Ir al menu principal</a>
+    
+{% endblock %}
