--- a/project/apps/producto/templates/producto/index.html
+++ b/project/apps/producto/templates/producto/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'home/base.html' %}
 
-    <h1>Bienvenido a mi proyecto de Django</h1>
+{% block TITULO %}
+
     <h2>{{ app }}</h2>
+    
+    <a href="{% url 'home:home' %}">Ir al menu principal</a>
+    
+{% endblock  %}
+    
 
-</body>
-</html>
